# minisearch

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.sh
include/minisearch/app/: Application.hpp
include/minisearch/cli/: CommandParser.hpp
include/minisearch/config/: AppConfig.hpp
include/minisearch/gui/: MainFrame.hpp
include/minisearch/index/: FileRecord.hpp  FileScanner.hpp  IndexBuilder.hpp  IndexCatalogStorage.hpp  IndexRepository.hpp  IndexSchema.hpp  IndexStorage.hpp  InvertedIndex.hpp  TextParser.hpp
include/minisearch/search/: SearchEngine.hpp
include/minisearch/shell/: InteractiveShell.hpp
include/minisearch/util/: Hash.hpp  Logger.hpp  ThreadPool.hpp
proto/: index.proto
scripts/: visualize_index_pb.py
src/: main.cpp
src/app/: Application.cpp
src/cli/: CommandParser.cpp
src/config/: AppConfig.cpp
src/gui/: MainFrame.cpp  main.cpp
src/index/: FileScanner.cpp  IndexBuilder.cpp  IndexCatalogStorage.cpp  IndexRepository.cpp  IndexSchema.cpp  IndexStorage.cpp  InvertedIndex.cpp  TextParser.cpp
src/search/: SearchEngine.cpp
src/shell/: InteractiveShell.cpp
src/util/: Hash.cpp  Logger.cpp  ThreadPool.cpp
test/: CMakeLists.txt
test/cli/: command_parser_test.cpp
test/config/: app_config_test.cpp
test/index/: file_scanner_test.cpp  index_builder_test.cpp  index_catalog_storage_test.cpp  index_repository_test.cpp  index_storage_test.cpp  inverted_index_test.cpp  text_parser_test.cpp
test/search/: search_engine_test.cpp
test/shell/: interactive_shell_test.cpp
test/util/: hash_test.cpp  logger_test.cpp  thread_pool_test.cpp
